<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="cancel_button_analytics_text" translatable="false">Cancel</string>

    <string name="handback_unrecoverableerror_title">Sorry, there’s a problem</string>
    <string name="handback_unrecoverableerror_body1">You cannot use this app to prove your identity at the moment.</string>
    <string name="handback_unrecoverableerror_body2">You can try again later, or check if you can prove your identity another way.</string>
    <string name="handback_unrecoverableerror_button">Check if you can prove your identity another way</string>

    <string name="handback_returntomobileweb_title">Return to GOV.UK to finish proving your identity</string>
    <string name="handback_returntomobileweb_title_content_description">Return to Gov dot UK to finish proving your identity</string>
    <string name="handback_returntomobileweb_body1">You’ve successfully submitted your information.</string>
    <string name="handback_returntomobileweb_body2">You can now finish proving your identity on the GOV.UK website.</string>
    <string name="handback_returntomobileweb_body2_content_description">You can now finish proving your identity on the Gov dot UK website.</string>
    <string name="handback_returntomobileweb_button">Continue to the GOV.UK website</string>

    <string name="handback_returntodesktopweb_title">Return to GOV.UK on your computer or tablet</string>
    <string name="handback_returntodesktopweb_title_content_description">Return to Gov dot UK on your computer or tablet</string>
    <string name="handback_returntodesktopweb_body1">You’ve successfully submitted your information.</string>
    <string name="handback_returntodesktopweb_body2">To finish proving your identity, you need to return to the GOV.UK page you left open on your computer or tablet.</string>
    <string name="handback_returntodesktopweb_body2_content_description">To finish proving your identity, you need to return to the Gov dot UK page you left open on your computer or tablet.</string>

    <string name="handback_confirmabort_title">Check if you can prove your identity another way</string>
    <string name="handback_confirmabort_body1">You’re about to leave this app and go back to the GOV.UK website.</string>
    <string name="handback_confirmabort_body1_content_description">You’re about to leave this app and go back to the Gov dot UK website</string>
    <string name="handback_confirmabort_body2">Continuing will delete any progress you’ve made in the app.</string>
    <string name="handback_confirmabortdesktopweb_button">Continue</string>
    <string name="handback_confirmabortmobileweb_button">Continue to the GOV.UK website</string>

    <string name="handback_abortedreturntodesktopweb_title">Return to GOV.UK on your computer or tablet</string>
    <string name="handback_abortedreturntodesktopweb_title_content_description">Return to Gov dot UK on your computer or tablet</string>
    <string name="handback_abortedreturntodesktopweb_body1">Return to the GOV.UK page you left open on your computer or tablet to check if you can prove your identity another way.</string>
    <string name="handback_abortedreturntodesktopweb_body1_content_description">Return to the Gov dot UK page you left open on your computer or tablet to check if you can prove your identity another way.</string>

    <string name="handback_facescanlimitreached_title">We were not able to confirm your identity</string>
    <string name="handback_facescanlimitreached_body1">You have reached the maximum number of times you can try to scan your face.</string>
    <string name="handback_facescanlimitreacheddesktop_body2">Return to the GOV.UK page you left open on your computer or tablet to check if you can prove your identity another way.</string>
    <string name="handback_facescanlimitreacheddesktop_body2_content_description">Return to the Gov dot UK page you left open on your computer or tablet to check if you can prove your identity another way.</string>
    <string name="handback_facescanlimitreachedmobile_body2">Continue to GOV.UK to check if you can prove your identity another way.</string>
    <string name="handback_facescanlimitreachedmobile_body2_content_description">Continue to Gov dot UK to check if you can prove your identity another way.</string>
    <string name="handback_facescanlimitreachedmobile_button">Continue to the GOV.UK website</string>

    <!-- No Valid Session error screen -->
    <string name="handback_no_valid_session_title">We were not able to confirm your identity</string>
    <string name="handback_no_valid_session_para_1">This could be because you started proving your identity more than an hour ago.</string>
    <string name="handback_no_valid_session_para_2">You need to start again.</string>
    <string name="handback_no_valid_session_para_3">Go back to the GOV.UK website. Find the service you need to use and try to prove your identity again.</string>
</resources>